// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keystore.ts getJWKS should return external jwks 1`] = `
[
  {
    "alg": "ES512",
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578790800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578618000,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES256",
    "created_at": 1578531600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExternal",
    "kty": "EC",
    "n": "n",
    "not_before": 1578531600,
    "origin_uri": "https://public.origin.uri/",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1578445200,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578272400,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578099600,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES384",
    "created_at": 1578013200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExternal",
    "kty": "EC",
    "n": "n",
    "not_before": 1578013200,
    "origin_uri": "https://private.origin.uri/",
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1577926800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;

exports[`Keystore.ts getJWKS should return private keys 1`] = `
[
  {
    "alg": "ES512",
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578790800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578618000,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1578445200,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "sign",
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578272400,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "encrypt",
      "sign",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578099600,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "sign",
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1577926800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;

exports[`Keystore.ts getJWKS should return public jwks 1`] = `
[
  {
    "alg": "ES512",
    "created_at": 1578790800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "publicKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578790800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578618000,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "publicKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578618000,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578445200,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "publicKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1578445200,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1578272400,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "expires_at": 1640995200,
    "key_ops": [
      "verify",
    ],
    "kid": "privateKeyExpires",
    "kty": "EC",
    "n": "n",
    "not_before": 1578272400,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "RS512",
    "created_at": 1578099600,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "decrypt",
      "verify",
    ],
    "kid": "privateKeyRSA",
    "kty": "RSA",
    "n": "n",
    "not_before": 1578099600,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
  {
    "alg": "ES512",
    "created_at": 1577926800,
    "crv": "crv",
    "d": "d",
    "dp": "dp",
    "dq": "dq",
    "e": "e",
    "key_ops": [
      "verify",
    ],
    "kid": "privateKey",
    "kty": "EC",
    "n": "n",
    "not_before": 1577926800,
    "p": "p",
    "q": "q",
    "qi": "qi",
    "use": "sig",
    "x": "x",
    "y": "y",
  },
]
`;
